src/tests/functionality/assignment_3_io_arrays_comments/valid/11_mandatory_array_as_function_argument.c
int first(int values[3]) {
    return values[0];
}

int main() {
    int values[3] = {10, 20, 30};
    return first(values);
}
