src/tests/functionality/assignment_3_io_arrays_comments/invalid_syntax/02_mandatory_array_missing_closing_bracket.c
int main() {
    int values[3;
    return 0;
}
